# tasker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/models/: task.py
app/settings/: settings_dialog.py
app/ui/: group_widget.py  main_window.py  styles.qss  task_dialog.py  task_widget.py
app/utils/: config.py  process.py  utils.py
