[project]
name = "Tasker"
version = "0.0.1"
authors = [
  { name="Kervin Adove Becinal", email="kervinadove@gmail.com" },
]
description = "Tasker makes it easy to run a group of terminal commands with a single click"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 2 - Pre Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://github.com/krvspacetime/tasker"